--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     </div>
                     <h3>HSC/SSC Exam Cropper</h3>
                     <p>Specialized cropping for exam images</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="sschsc_photo_sign_cropper.html" class="tool-button">Use Tool</a>
                 </div>
             </div>
         </div>
