--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,21 +28,21 @@ If you have any questions, feel free to contact us at **[fullusetool@gmail.com](
 
 ---
 
-## 1. Information We Collect
+<h2></h2>## 1. Information We Collect
 
-We may collect the following types of information when you use our site:
+<p></p>We may collect the following types of information when you use our site:
 
-### a. Personal Information
+<h2></h2>### a. Personal Information
 
-We do **not** require you to create an account or submit personal information to use most tools. However, if you contact us, we may collect:
+<p></p>We do **not** require you to create an account or submit personal information to use most tools. However, if you contact us, we may collect:
 
 * Name (if provided)
 * Email address
 * Any content you submit via contact forms or emails
 
-### b. Usage Data
+<h2></h2>### b. Usage Data
 
-We may collect non-personal information such as:
+<p></p>We may collect non-personal information such as:
 
 * IP address
 * Browser type and version
@@ -53,9 +53,9 @@ We may collect non-personal information such as:
 
 This data helps us understand how users interact with our website and improve our services.
 
-### c. Cookies & Tracking Technologies
+<h2></h2>### c. Cookies & Tracking Technologies
 
-We may use cookies or similar technologies to enhance user experience, such as:
+<p></p>We may use cookies or similar technologies to enhance user experience, such as:
 
 * Remembering your preferences
 * Analyzing site traffic
@@ -64,9 +64,9 @@ You can control cookie settings through your browser.
 
 ---
 
-## 2. How We Use Your Information
+<h2></h2>## 2. How We Use Your Information
 
-We may use the collected information to:
+<p></p>We may use the collected information to:
 
 * Improve website performance and tools
 * Respond to your inquiries
@@ -77,9 +77,9 @@ We do **not** sell, rent, or share your personal information with third parties 
 
 ---
 
-## 3. Third-Party Services
+<h2></h2>## 3. Third-Party Services
 
-We may use trusted third-party services (such as analytics tools or ad networks) that collect data in order to:
+<p></p>We may use trusted third-party services (such as analytics tools or ad networks) that collect data in order to:
 
 * Analyze traffic (e.g., Google Analytics)
 * Display relevant ads (if ads are used)
@@ -88,15 +88,15 @@ These third parties may use cookies or other tracking methods. Their use of your
 
 ---
 
-## 4. Data Security
+<h2></h2>## 4. Data Security
 
-We take reasonable steps to protect your information from unauthorized access, disclosure, or destruction. However, no method of transmission over the internet is 100% secure.
+<p></p>We take reasonable steps to protect your information from unauthorized access, disclosure, or destruction. However, no method of transmission over the internet is 100% secure.
 
 ---
 
-## 5. Your Rights
+<h2></h2>## 5. Your Rights
 
-Depending on your location, you may have rights under data protection laws, including:
+<p></p>Depending on your location, you may have rights under data protection laws, including:
 
 * The right to access, update, or delete your personal information
 * The right to object to data processing
@@ -106,9 +106,9 @@ To exercise your rights, contact us at **[fullusetool@gmail.com](mailto:fulluset
 
 ---
 
-## 6. Children's Privacy
+<h2></h2>## 6. Children's Privacy
 
-Our website is not intended for children under 13. We do not knowingly collect personal information from children. If you believe we have, please contact us.
+<p></p>Our website is not intended for children under 13. We do not knowingly collect personal information from children. If you believe we have, please contact us.
 
 ---
 
