--- a/image-converter.html
+++ b/image-converter.html
@@ -117,6 +117,16 @@
       reader.readAsDataURL(originalFile);
     }
   </script>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'fa66a799f572f71b166102f1c3c32415',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/fa66a799f572f71b166102f1c3c32415/invoke.js"></script>
 </body>
 </html>
   
