--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                     </div>
                     <h3>Image Resizer</h3>
                     <p>Resize images to any dimension you need</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="Image-Resizer.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
