--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                     </div>
                     <h3>Image Cropper</h3>
                     <p>Crop images to focus on what matters</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="Image-Cropper.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
