--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                     </div>
                     <h3>Image to Text (OCR)</h3>
                     <p>Extract text from images with OCR technology</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="Image-To-Text.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
