--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     </div>
                     <h3>PDF to Word / Word to PDF</h3>
                     <p>Convert between PDF and Word formats</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="PDF-to-Word.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
