--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                     </div>
                     <h3>PDF Compressor</h3>
                     <p>Reduce PDF file size for easy sharing</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="PDF-Compressor.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
