--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                     </div>
                     <h3>PDF Merger & Splitter</h3>
                     <p>Combine or separate PDF pages</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="PDF-Merger-Splitter.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
