--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                     </div>
                     <h3>eSign PDF</h3>
                     <p>Add digital signatures to your documents</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="eSign-PDF.html" class="tool-button">Use Tool</a>
                 </div>
             </div>
         </div>
