--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                     </div>
                     <h3>Scientific Calculator</h3>
                     <p>Advanced calculations for complex problems</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="Scientific-Calculator.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
