--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                     </div>
                     <h3>Age Calculator</h3>
                     <p>Calculate exact age in years, months, and days</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="Age-Calculator.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
