--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                     </div>
                     <h3>Loan EMI Calculator</h3>
                     <p>Calculate your Equated Monthly Installments</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="Loan-EMI-Calculator.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
