--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                     </div>
                     <h3>GST Calculator</h3>
                     <p>Calculate Goods and Services Tax</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="GST-Calculator.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
