--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     </div>
                     <h3>Currency Converter</h3>
                     <p>Convert between world currencies</p>
-                    <a href="#" class="tool-button">Use Tool</a>
+                    <a href="Currency-Converter.html" class="tool-button">Use Tool</a>
                 </div>
             </div>
         </div>
